--- a/package.json
+++ b/package.json
@@ -8,9 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
+    "cloudinary": "^2.8.0",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.16.0",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.3",
+    "next": "15.5.4",
+    "next-auth": "^4.24.13",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-geocode": "^2.0.1",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.1.0",
+    "react-share": "^5.2.2",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
