--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.19.3",
     "next": "15.5.4",
     "next-auth": "^4.24.13",
+    "photoswipe": "^5.4.4",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
@@ -23,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.1.0",
+    "react-photoswipe-gallery": "^4.0.0",
     "react-share": "^5.2.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5"
