--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,12 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 .env*.local
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+*.env
 
 # vercel
 .vercel
