--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "mapbox-gl": "^3.16.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.3",
-    "next": "15.5.4",
+    "next": "^16.0.8",
     "next-auth": "^4.24.13",
     "photoswipe": "^5.4.4",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-geocode": "^2.0.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
