--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "photoswipe": "^5.4.4",
     "react": "^19.1.2",
     "react-chartjs-2": "^5.3.1",
+    "react-datepicker": "^9.0.0",
     "react-dom": "^19.1.2",
     "react-geocode": "^2.0.1",
     "react-icons": "^5.5.0",
