Faz 3.3 Tamamlandı: Profil sayfası resim optimizasyonları ve Auth sistemi

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.1",
     "cloudinary": "^2.8.0",
     "leaflet": "^1.9.4",
