--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.1.0",
+    "react-photo-view": "^1.2.7",
     "react-photoswipe-gallery": "^4.0.0",
     "react-share": "^5.2.2",
     "react-spinners": "^0.17.0",
