--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.19.3",
     "next": "^15.1.9",
     "next-auth": "^4.24.13",
+    "next-themes": "^0.4.6",
     "photoswipe": "^5.4.4",
     "react": "^19.1.2",
     "react-chartjs-2": "^5.3.1",
@@ -34,7 +35,8 @@
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
