Faz5 ThreeJS anahtar loading... olarak eklendi

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.1",
     "cloudinary": "^2.8.0",
@@ -33,7 +35,8 @@
     "react-photoswipe-gallery": "^4.0.0",
     "react-share": "^5.2.2",
     "react-spinners": "^0.17.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.23",
