--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.19.3",
     "next": "^15.1.9",
     "next-auth": "^4.24.13",
+    "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
     "photoswipe": "^5.4.4",
     "react": "^19.1.2",
